--- a/index.html
+++ b/index.html
@@ -204,7 +204,10 @@
                         <div class="about-item-content">
                             <p class="text-uppercase text-secondary fs-5 mb-0">WE ARE CONSTRUCTION COMPANY</p>
                             <h2 class="display-4 text-capitalize mb-3">Making your vision come true at the basics.</h2>
-                            <p class="mb-4 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            <p class="mb-4 fs-5">AAR Enterprises is simply quality work of the engineering and construction industry. 
+AAR Enterprises has been the industry’s standard in durable design ever since the beginning, 
+building trust, strength, and timeless structures for communities.
+
                             </p>
                             <div class="pb-4 mb-4 border-bottom">
                                 <div class="row g-4">
@@ -261,7 +264,7 @@
                                 <i class="fas fa-city text-primary fa-5x"></i>
                             </div>
                             <a href="#" class="h4 d-block my-4">Expert Engineer</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
+                            <p class="mb-0">AAR Enterprises designs with care and constructs with precision. Every foundation reflects lasting excellence.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
@@ -270,7 +273,7 @@
                                 <i class="fas fa-funnel-dollar text-primary fa-5x"></i>
                             </div>
                             <a href="#" class="h4 d-block my-4">Free Estimates</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
+                            <p class="mb-0">AAR Enterprises builds with strength and delivers with trust. Quality projects stand tall for generations</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
@@ -279,7 +282,7 @@
                                 <i class="fas fa-tools text-primary fa-5x"></i>
                             </div>
                             <a href="#" class="h4 d-block my-4">Quality Materials</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
+                            <p class="mb-0">AAR Enterprises creates durable spaces and shapes modern infrastructure. Trusted solutions for every project.</p>
                         </div>
                     </div>
                 </div>
@@ -306,7 +309,7 @@
                                     <i class="fas fa-home text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">General Construction</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -329,7 +332,7 @@
                                     <i class="fas fa-users-cog text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Property Maintenance</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises shapes with vision and constructs with care. Safe, durable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -352,7 +355,7 @@
                                     <i class="fas fa-hospital-user text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Project managment</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises shapes with vision and constructs with care. Safe, durable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -375,7 +378,7 @@
                                     <i class="fas fa-file-invoice-dollar text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Virtual Design & Build</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises designs with passion and engineers with precision. Bold, lasting!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -398,7 +401,7 @@
                                     <i class="fas fa-cogs text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Preconstruction</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -421,7 +424,7 @@
                                     <i class="fas fa-sitemap text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Design Build</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
