all content data of website changes ..

--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Constra - Building Construction Website Template</title>
+        <title>AAR Enterprises</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -47,9 +47,9 @@
             <div class="row gx-0 align-items-center" style="height: 45px;">
                 <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
-                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
-                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
+                        <a href="https://maps.app.goo.gl/1FT8EMyBuWbQUijTA" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+91 9810814521</a>
+                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>aarenterprises@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
@@ -70,8 +70,11 @@
         <div class="container-fluid sticky-top px-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
                 <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                    <!-- <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1> -->
+                    <!-- <img src="./img/ARREL.png" alt="Logo" style="height:80px; width:auto;"> -->
+                     <img src="./img/AAR Enterprises Logonew.png" alt="Logo" 
+     style="height:80px; width:auto; border-radius:15%;">
+
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -82,7 +85,7 @@
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link active">Services</a>
                         <a href="project.html" class="nav-item nav-link">Projects</a>
-                        <div class="nav-item dropdown">
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-lg-0">
                                 <a href="feature.html" class="dropdown-item">Our Features</a>
@@ -91,7 +94,7 @@
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
@@ -128,7 +131,7 @@
                 <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our Services</h4>
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                    <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                     <li class="breadcrumb-item active text-secondary">Service</li>
                 </ol>    
             </div>
@@ -136,8 +139,8 @@
         <!-- Header End -->
 
         <!-- Services Start -->
-        <div class="container-fluid service bg-light py-5">
-            <div class="container py-5">
+          <div class="container-fluid service bg-light pb-5">
+            <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <p class="text-uppercase text-secondary fs-5 mb-0">Our Services</p>
                     <h2 class="display-4 text-capitalize mb-3">our service is creative, & decent</h2>
@@ -153,7 +156,7 @@
                                     <i class="fas fa-home text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">General Construction</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -176,7 +179,7 @@
                                     <i class="fas fa-users-cog text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Property Maintenance</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises shapes with vision and constructs with care. Safe, durable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -199,7 +202,7 @@
                                     <i class="fas fa-hospital-user text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Project managment</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises shapes with vision and constructs with care. Safe, durable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -222,7 +225,7 @@
                                     <i class="fas fa-file-invoice-dollar text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Virtual Design & Build</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises designs with passion and engineers with precision. Bold, lasting!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -245,7 +248,7 @@
                                     <i class="fas fa-cogs text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Preconstruction</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -268,7 +271,7 @@
                                     <i class="fas fa-sitemap text-primary fa-4x"></i>
                                 </div>
                                 <a href="#" class="d-block fs-4 my-4">Design Build</a>
-                                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, minima!</p>
+                                <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
@@ -362,8 +365,8 @@
         <!-- Fact Counter -->
 
         <!-- Testimonial Start -->
-        <div class="container-fluid testimonial py-5">
-            <div class="container py-5">
+         <div class="container-fluid testimonial pb-5">
+            <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <p class="text-uppercase text-secondary fs-5 mb-0">Testimonials</p>
                     <h2 class="display-4 text-capitalize mb-3">Our clients reviews.</h2>
@@ -373,7 +376,8 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-primary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">AAR Enterprises is simply trusted name of the construction industry.
+AAR Enterprises has been the industry’s standard in quality projects ever since its foundation.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -398,7 +402,8 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-primary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">AAR Enterprises is simply leading force of the building sector.
+AAR Enterprises has been the industry’s standard in strong infrastructure ever since the early years.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -423,7 +428,8 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-primary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">AAR Enterprises is simply reliable brand of the civil and engineering industry.
+AAR Enterprises has been the industry’s standard in durable work ever since the beginning.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -450,14 +456,14 @@
         <!-- Testimonial End -->
 
         <!-- Footer Start -->
-        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
+         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
                                 <h4 class="text-white mb-4">Newsletter</h4>
-                                <p class="mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+                                <p class="mb-3">“AAR Enterprises – Constructing dreams with strength.”</p>
                                 <div class="position-relative mx-auto">
                                     <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
                                     <button type="button" class="btn btn-secondary position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
@@ -492,11 +498,11 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block 4th Floor Gagan Apartment,Patna(Bihar)</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i>aarenterprises@gmail.com</a>
+                            <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
+                            <a href=""><i class="fas fa-phone me-2"></i>+91 9810814521</a>
+                            <!-- <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a> -->
                             <div class="footer-btn d-flex align-items-center">
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-facebook-f text-white"></i></a>
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-twitter text-white"></i></a>
@@ -516,13 +522,13 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>AAR Enterprises</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end text-body">
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom text-white" href="https://adivioinfotech.com">Adivio infotech</a>
                     </div>
                 </div>
             </div>
