--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Constra - Building Construction Website Template</title>
+        <title>AAR Enterprises</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -43,13 +43,13 @@
 
 
         <!-- Topbar Start -->
-        <div class="container-fluid topbar d-none d-xl-block w-100">
+         <div class="container-fluid topbar d-none d-xl-block w-100">
             <div class="row gx-0 align-items-center" style="height: 45px;">
                 <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
-                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
-                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
+                        <a href="https://maps.app.goo.gl/1FT8EMyBuWbQUijTA" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+91 9810814521</a>
+                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>aarenterprises@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
@@ -69,9 +69,12 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid sticky-top px-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
-                <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                 <a href="index.html" class="navbar-brand p-0">
+                    <!-- <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1> -->
+                    <!-- <img src="./img/ARREL.png" alt="Logo" style="height:80px; width:auto;"> -->
+                     <img src="./img/AAR Enterprises Logonew.png" alt="Logo" 
+     style="height:80px; width:auto; border-radius:15%;">
+
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -82,7 +85,7 @@
                         <a href="about.html" class="nav-item nav-link active">About</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="project.html" class="nav-item nav-link">Projects</a>
-                        <div class="nav-item dropdown">
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-lg-0">
                                 <a href="feature.html" class="dropdown-item">Our Features</a>
@@ -91,7 +94,7 @@
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
@@ -128,7 +131,7 @@
                 <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">About Us</h4>
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                    <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                     <li class="breadcrumb-item active text-secondary">About</li>
                 </ol>    
             </div>
@@ -152,8 +155,8 @@
                         <div class="about-item-content">
                             <p class="text-uppercase text-secondary fs-5 mb-0">WE ARE CONSTRUCTION COMPANY</p>
                             <h2 class="display-4 text-capitalize mb-3">Making your vision come true at the basics.</h2>
-                            <p class="mb-4 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                            </p>
+                            <p class="mb-4 fs-5">AAR Enterprises is simply trusted name of the building and construction industry.
+AAR Enterprises has been the industry’s standard in quality projects ever since its foundation.
                             <div class="pb-4 mb-4 border-bottom">
                                 <div class="row g-4">
                                     <div class="col-lg-4">
@@ -196,7 +199,7 @@
         <!-- About End -->
 
         <!-- Features Start -->
-        <div class="container-fluid feature bg-light py-5">
+         <div class="container-fluid feature bg-light py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <p class="text-uppercase text-secondary fs-5 mb-0">WHy US</p>
@@ -209,7 +212,7 @@
                                 <i class="fas fa-city text-primary fa-5x"></i>
                             </div>
                             <a href="#" class="h4 d-block my-4">Expert Engineer</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
+                            <p class="mb-0">AAR Enterprises designs with care and constructs with precision. Every foundation reflects lasting excellence.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
@@ -218,7 +221,7 @@
                                 <i class="fas fa-funnel-dollar text-primary fa-5x"></i>
                             </div>
                             <a href="#" class="h4 d-block my-4">Free Estimates</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
+                            <p class="mb-0">AAR Enterprises builds with strength and delivers with trust. Quality projects stand tall for generations</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
@@ -227,7 +230,7 @@
                                 <i class="fas fa-tools text-primary fa-5x"></i>
                             </div>
                             <a href="#" class="h4 d-block my-4">Quality Materials</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
+                            <p class="mb-0">AAR Enterprises creates durable spaces and shapes modern infrastructure. Trusted solutions for every project.</p>
                         </div>
                     </div>
                 </div>
@@ -308,8 +311,8 @@
         <!-- Fact Counter -->
 
         <!-- Team Start -->
-        <div class="container-fluid team py-5">
-            <div class="container py-5">
+       <div class="container-fluid team pb-5">
+            <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <p class="text-uppercase text-secondary fs-5 mb-0">Our Team</p>
                     <h2 class="display-4 text-capitalize mb-3">Expert team members.</h2>
@@ -331,7 +334,7 @@
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
+                                <h4 class="mb-0">Rohit Kumar</h4>
                                 <p class="mb-0">Foreman</p>
                             </div>
                         </div>
@@ -352,7 +355,7 @@
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
+                                <h4 class="mb-0">Raju Kumar</h4>
                                 <p class="mb-0">Foreman</p>
                             </div>
                         </div>
@@ -373,7 +376,7 @@
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
+                                <h4 class="mb-0">Satyam Kumar</h4>
                                 <p class="mb-0">Foreman</p>
                             </div>
                         </div>
@@ -394,7 +397,7 @@
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
+                                <h4 class="mb-0">Pawan Singh</h4>
                                 <p class="mb-0">Foreman</p>
                             </div>
                         </div>
@@ -448,7 +451,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 4th Floor Gagan Apartment,Patna(Bihar)</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block  4th Floor Gagan Apartment,Patna(Bihar)</a>
                             <a href=""><i class="fas fa-envelope me-2"></i>aarenterprises@gmail.com</a>
                             <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
                             <a href=""><i class="fas fa-phone me-2"></i>+91 9810814521</a>
