--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ building trust, strength, and timeless structures for communities.
                                     <div class="project-content mb-4">
                                         <p class="fs-5 text-secondary mb-2">Architecture</p>
                                         <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="mb-0 mt-3">AAR Enterprises builds with strength and delivers with excellence. Every project reflects passion, crafted to last and designed to inspire modern spaces.</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
@@ -556,7 +556,7 @@ building trust, strength, and timeless structures for communities.
                                     <div class="project-content mb-4">
                                         <p class="fs-5 text-secondary mb-2">Interior Design</p>
                                         <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="mb-0 mt-3">AAR Enterprises constructs with care and engineers with precision. Strong foundations stand tall, bringing value, safety, and trust to every client vision.</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
@@ -575,7 +575,7 @@ building trust, strength, and timeless structures for communities.
                                     <div class="project-content mb-4">
                                         <p class="fs-5 text-secondary mb-2">House & Exterior</p>
                                         <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="mb-0 mt-3">AAR Enterprises shapes tomorrow with innovation and dedication. Quality work defines progress, creating structures that endure and communities that grow stronger.</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
@@ -594,7 +594,7 @@ building trust, strength, and timeless structures for communities.
                                     <div class="project-content mb-4">
                                         <p class="fs-5 text-secondary mb-2">Interior Design</p>
                                         <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="mb-0 mt-3">AAR Enterprises constructs with care and manages with precision. Each foundation designed to endure, creating structures that define trust and inspire progress.</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
@@ -633,7 +633,7 @@ building trust, strength, and timeless structures for communities.
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
+                                <h4 class="mb-0">Rohit Kumar</h4>
                                 <p class="mb-0">Foreman</p>
                             </div>
                         </div>
@@ -654,7 +654,7 @@ building trust, strength, and timeless structures for communities.
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
+                                <h4 class="mb-0">Raju Kumar</h4>
                                 <p class="mb-0">Foreman</p>
                             </div>
                         </div>
@@ -675,7 +675,7 @@ building trust, strength, and timeless structures for communities.
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
+                                <h4 class="mb-0">Satyam Kumar</h4>
                                 <p class="mb-0">Foreman</p>
                             </div>
                         </div>
@@ -696,7 +696,7 @@ building trust, strength, and timeless structures for communities.
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
+                                <h4 class="mb-0">Pawan Singh</h4>
                                 <p class="mb-0">Foreman</p>
                             </div>
                         </div>
@@ -776,7 +776,8 @@ building trust, strength, and timeless structures for communities.
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-primary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">AAR Enterprises is simply trusted name of the construction industry.
+AAR Enterprises has been the industry’s standard in quality projects ever since its foundation.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -801,7 +802,8 @@ building trust, strength, and timeless structures for communities.
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-primary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">AAR Enterprises is simply leading force of the building sector.
+AAR Enterprises has been the industry’s standard in strong infrastructure ever since the early years.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -826,7 +828,8 @@ building trust, strength, and timeless structures for communities.
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-primary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">AAR Enterprises is simply reliable brand of the civil and engineering industry.
+AAR Enterprises has been the industry’s standard in durable work ever since the beginning.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
@@ -895,7 +898,7 @@ building trust, strength, and timeless structures for communities.
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 4th Floor Gagan Apartment,Patna(Bihar)</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block 4th Floor Gagan Apartment,Patna(Bihar)</a>
                             <a href=""><i class="fas fa-envelope me-2"></i>aarenterprises@gmail.com</a>
                             <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
                             <a href=""><i class="fas fa-phone me-2"></i>+91 9810814521</a>
