--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Constra - Building Construction Website Template</title>
+        <title>AAR Enterprises</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -43,13 +43,13 @@
 
 
         <!-- Topbar Start -->
-        <div class="container-fluid topbar d-none d-xl-block w-100">
+       <div class="container-fluid topbar d-none d-xl-block w-100">
             <div class="row gx-0 align-items-center" style="height: 45px;">
                 <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
-                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
-                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
+                        <a href="https://maps.app.goo.gl/1FT8EMyBuWbQUijTA" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+91 9810814521</a>
+                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>aarenterprises@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
@@ -69,9 +69,12 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid sticky-top px-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
-                <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+               <a href="index.html" class="navbar-brand p-0">
+                    <!-- <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1> -->
+                    <!-- <img src="./img/ARREL.png" alt="Logo" style="height:80px; width:auto;"> -->
+                     <img src="./img/AAR Enterprises Logonew.png" alt="Logo" 
+     style="height:80px; width:auto; border-radius:15%;">
+
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -82,7 +85,7 @@
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="project.html" class="nav-item nav-link active">Projects</a>
-                        <div class="nav-item dropdown">
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-lg-0">
                                 <a href="feature.html" class="dropdown-item">Our Features</a>
@@ -91,7 +94,7 @@
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
@@ -128,7 +131,7 @@
                 <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our Projects</h4>
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                    <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                     <li class="breadcrumb-item active text-secondary">Project</li>
                 </ol>    
             </div>
@@ -155,7 +158,7 @@
                                     <div class="project-content mb-4">
                                         <p class="fs-5 text-secondary mb-2">Architecture</p>
                                         <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="mb-0 mt-3">AAR Enterprises builds with strength and delivers with excellence. Every project reflects passion, crafted to last and designed to inspire modern spaces.</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
@@ -174,7 +177,7 @@
                                     <div class="project-content mb-4">
                                         <p class="fs-5 text-secondary mb-2">Interior Design</p>
                                         <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="mb-0 mt-3">AAR Enterprises constructs with care and engineers with precision. Strong foundations stand tall, bringing value, safety, and trust to every client vision.</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
@@ -193,7 +196,7 @@
                                     <div class="project-content mb-4">
                                         <p class="fs-5 text-secondary mb-2">House & Exterior</p>
                                         <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="mb-0 mt-3">AAR Enterprises shapes tomorrow with innovation and dedication. Quality work defines progress, creating structures that endure and communities that grow stronger.</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
@@ -212,7 +215,7 @@
                                     <div class="project-content mb-4">
                                         <p class="fs-5 text-secondary mb-2">Interior Design</p>
                                         <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="mb-0 mt-3">AAR Enterprises constructs with care and manages with precision. Each foundation designed to endure, creating structures that define trust and inspire progress.</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
@@ -228,14 +231,14 @@
         <!-- Projects End -->
 
         <!-- Footer Start -->
-        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
+         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
                                 <h4 class="text-white mb-4">Newsletter</h4>
-                                <p class="mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+                                <p class="mb-3">“AAR Enterprises – Constructing dreams with strength.”</p>
                                 <div class="position-relative mx-auto">
                                     <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
                                     <button type="button" class="btn btn-secondary position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
@@ -270,11 +273,11 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block 4th Floor Gagan Apartment,Patna(Bihar)</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i>aarenterprises@gmail.com</a>
+                            <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
+                            <a href=""><i class="fas fa-phone me-2"></i>+91 9810814521</a>
+                            <!-- <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a> -->
                             <div class="footer-btn d-flex align-items-center">
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-facebook-f text-white"></i></a>
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-twitter text-white"></i></a>
@@ -294,13 +297,13 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>AAR Enterprises</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end text-body">
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom text-white" href="https://adivioinfotech.com">Adivio infotech</a>
                     </div>
                 </div>
             </div>
