add meta tags for indexing ..

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
     <head>
         <meta charset="utf-8">
-        <title>AAR Enterprises</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+       <title>AAR Enterprises</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta name="keywords" content="AAR Enterprises, construction company, civil engineering, building contractors, infrastructure development, real estate projects, residential construction, commercial construction, road construction, trusted builders, quality construction services, construction in India">
+<meta name="description" content="AAR Enterprises is a trusted construction company delivering high-quality building, infrastructure, and civil engineering projects with excellence and reliability.">
+
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
