--- a/about.html
+++ b/about.html
@@ -8,6 +8,25 @@
        <meta name="keywords" content="AAR Enterprises, construction company, civil engineering, building contractors, infrastructure development, real estate projects, residential construction, commercial construction, road construction, trusted builders, quality construction services, construction in India">
 <meta name="description" content="AAR Enterprises is a trusted construction company delivering high-quality building, infrastructure, and civil engineering projects with excellence and reliability.">
 
+  <!-- Favicon Start-->
+        <!-- Favicon for all browsers -->
+<link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
+
+<!-- PNG favicons -->
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+
+<!-- Apple devices -->
+<link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+
+<!-- Android/Chrome -->
+<link rel="icon" type="image/png" sizes="192x192" href="favicon_io/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="favicon_io/android-chrome-512x512.png">
+
+<!-- Web App Manifest -->
+<link rel="manifest" href="favicon_io/site.webmanifest">
+
+         <!-- Favicon End-->
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
